--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-ancient-moon-a4w04cks-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="wN5VZgfzrhe6"
 POSTGRES_DATABASE="verceldb"
+PORT=5050
+SALT="a1b2c3d4e5f6g7h8i9j0"
+```
